fix security guard bug + starting staff module overview + detail

--- a/app/src/app/feature/router/router-page/router-page.component.css
+++ b/app/src/app/feature/router/router-page/router-page.component.css
@@ -22,3 +22,8 @@ nav{
   @apply px-4 py-3 rounded-full;
   border:2px solid var(--primary-color);
 }
+
+.icon-size {
+  width: 25px;
+  height: 25px;
+}
