add staff overview

--- a/app/src/app/feature/router/router-page/router-page.component.html
+++ b/app/src/app/feature/router/router-page/router-page.component.html
@@ -1,5 +1,5 @@
-<main class="flex h-screen">
-  <nav>
+<main class="flex ">
+  <nav class=" min-h-screen">
     <div class="flex gap-4 items-center">
       <fa-icon [icon]="faChartSimple"></fa-icon>
       <h1 class="text-center">{{ 'dashboard-feature.router-title' | translate }}</h1>
