--- a/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
+++ b/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
@@ -1,78 +1,44 @@
-<main class="p-6 bg-gray-100 min-h-screen">
-  <!-- Titre de la page -->
+<main class="p-6">
+
   <div class="mb-6">
-    <h1 class="text-3xl font-semibold text-gray-800">Dashboard des Travailleurs</h1>
+    <h1>{{ 'staff-feature-overview-title' | translate }}</h1>
   </div>
 
-  <!-- Section des cartes statistiques -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
-    <!-- Carte 1: Total des travailleurs -->
-    <div class="bg-white p-6 rounded-lg shadow-md flex items-center justify-between">
-      <div>
-        <h3 class="text-lg font-medium text-gray-700">Total des Travailleurs</h3>
-        <p class="text-3xl font-bold text-indigo-600">120</p>
-      </div>
-      <i class="pi pi-users text-4xl text-indigo-600"></i>
-    </div>
+  @if(loading){
+    <p-progress-spinner/>
+  }
+  @else{
+    @if(employees$().length > 0){
+      <p-table [value]="employees$()" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template #header>
+          <tr>
+            <th>{{ 'staff-lastname' | translate }}</th>
+            <th>{{ 'staff-firstname' | translate }}</th>
+            <th>{{ 'staff-mail' | translate }}</th>
+            <th>{{ 'staff-role' | translate }}</th>
+            <th>{{ 'staff-overview-action' | translate }}</th>
+          </tr>
+        </ng-template>
+        <ng-template #body let-employee>
+          <tr>
+            <td class="capitalize">{{ employee.lastname }}</td>
+            <td class="capitalize">{{ employee.firstname }}</td>
+            <td>{{ employee.mail }}</td>
+            <td>{{ UserRoleEnum[employee.role] }}</td>
+            <td class="flex gap-2">
+              <a class="btn btn-success" [routerLink]=[AppRoutes.STAFFDETAIL,employee.employeeId]>{{ 'overview-action-detail' | translate }}</a>
+              <a class="btn btn-danger">{{ 'overview-action-delete' | translate }}</a>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
 
-    <!-- Carte 2: Travailleurs Actifs -->
-    <div class="bg-white p-6 rounded-lg shadow-md flex items-center justify-between">
-      <div>
-        <h3 class="text-lg font-medium text-gray-700">Travailleurs Actifs</h3>
-        <p class="text-3xl font-bold text-green-600">95</p>
-      </div>
-      <i class="pi pi-check-circle text-4xl text-green-600"></i>
-    </div>
+    }
+    @else{
+      <h1>Any employee registered yet</h1>
+    }
+  }
 
-    <!-- Carte 3: Travailleurs Inactifs -->
-    <div class="bg-white p-6 rounded-lg shadow-md flex items-center justify-between">
-      <div>
-        <h3 class="text-lg font-medium text-gray-700">Travailleurs Inactifs</h3>
-        <p class="text-3xl font-bold text-red-600">25</p>
-      </div>
-      <i class="pi pi-times-circle text-4xl text-red-600"></i>
-    </div>
-  </div>
 
-  <!-- Section des graphiques -->
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-8">
-    <!-- Graphique 1: Répartition par département -->
-    <div class="bg-white p-6 rounded-lg shadow-md">
-      <h3 class="text-xl font-semibold text-gray-800 mb-4">Répartition par Département</h3>
-      <p-chart type="pie" [data]="departmentData" styleClass="w-full h-56"></p-chart>
-    </div>
-
-    <!-- Graphique 2: Répartition des âges -->
-    <div class="bg-white p-6 rounded-lg shadow-md">
-      <h3 class="text-xl font-semibold text-gray-800 mb-4">Répartition des âges</h3>
-      <p-chart type="bar" [data]="ageData" styleClass="w-full h-56"></p-chart>
-    </div>
-  </div>
-
-  <!-- Section des derniers travailleurs ajoutés -->
-  <div class="bg-white p-6 rounded-lg shadow-md">
-    <h3 class="text-xl font-semibold text-gray-800 mb-4">Derniers Travailleurs Ajoutés</h3>
-    <table class="min-w-full divide-y divide-gray-200">
-      <thead class="bg-gray-200">
-      <tr>
-        <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase">Nom</th>
-        <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase">Poste</th>
-        <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase">Date d'Ajout</th>
-      </tr>
-      </thead>
-      <tbody class="bg-white divide-y divide-gray-200">
-      <tr>
-        <td class="px-6 py-4 text-sm text-gray-900">Jane Doe</td>
-        <td class="px-6 py-4 text-sm text-gray-500">Développeur Backend</td>
-        <td class="px-6 py-4 text-sm text-gray-500">10/12/2024</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4 text-sm text-gray-900">John Smith</td>
-        <td class="px-6 py-4 text-sm text-gray-500">Designer UI/UX</td>
-        <td class="px-6 py-4 text-sm text-gray-500">08/12/2024</td>
-      </tr>
-      <!-- Autres travailleurs peuvent être ajoutés ici -->
-      </tbody>
-    </table>
-  </div>
 </main>
+
