add toast, edit employee + design

--- a/app/src/app/root/component/app.component.html
+++ b/app/src/app/root/component/app.component.html
@@ -1,4 +1,4 @@
-<div class="text-right absolute bottom-5 left-5 text-cyan-50">
+<div class="text-right absolute bottom-5 left-5 text-cyan-50 z-50">
   <span (click)="changeLanguage('en')" class="cursor-pointer">en</span>
   <span class="px-2">|</span>
   <span (click)="changeLanguage('fr')" class="cursor-pointer">fr</span>
