--- a/app/src/app/feature/staff/page/staff-detail-page/staff-detail-page.component.html
+++ b/app/src/app/feature/staff/page/staff-detail-page/staff-detail-page.component.html
@@ -12,16 +12,19 @@
     @if(employee$()){
       <p-tabs value="0">
         <p-tablist>
-          <p-tab class="capitalize" value="0">{{ 'staff-detail-feature-first-tab' | translate }}</p-tab>
-          <p-tab class="capitalize" value="1">{{ 'staff-detail-feature-second-tab' | translate }}</p-tab>
-          <p-tab class="capitalize" value="2">{{ 'staff-detail-feature-third-tab' | translate }}</p-tab>
+          <p-tab class="uppercase" value="0">{{ 'staff-detail-feature-first-tab' | translate }}</p-tab>
+          <p-tab class="uppercase" value="1">{{ 'staff-detail-feature-second-tab' | translate }}</p-tab>
         </p-tablist>
         <p-tabpanels>
           <p-tabpanel value="0">
-            <form [formGroup]="formGroup">
-              <div>
-                <h2 class="capitalize">{{ 'staff-detail-feature-personal-data' | translate }}</h2>
-                  <div class="my-8 flex w-2/5 justify-between">
+            <form [formGroup]="staffFormGroup" class="flex justify-between flex-wrap mx-10" (ngSubmit)="update()">
+              <div class="form-section">
+                <div class="flex gap-4 mb-4">
+                  <p-button variant="outlined" (click)="onEditClick()" severity="warn">{{ "btn-edit" | translate }}</p-button>
+                  <p-button variant="outlined" (click)="onEditClick()" severity="danger">{{ "btn-delete" | translate }}</p-button>
+                </div>
+                <h2>{{ 'staff-detail-feature-personal-data' | translate }}</h2>
+                  <div class="my-8 flex justify-between flex-wrap gap-8">
                     <p-floatlabel>
                       <input formControlName="lastname" pInputText id="lastname"/>
                       <label for="lastname">{{ "staff-lastname" | translate }}</label>
@@ -31,8 +34,8 @@
                       <label for="firstname">{{ "staff-firstname" | translate }}</label>
                     </p-floatlabel>
                   </div>
-                  <div class="my-8 flex gap-6 flex-col">
-                    <div class="flex justify-between w-2/5">
+                  <div class="my-8 flex gap-6 flex-col flex-wrap">
+                    <div class="flex justify-between flex-wrap gap-6">
                       <p-floatlabel>
                         <input formControlName="role" pInputText id="role"/>
                         <label for="role">{{ "staff-role" | translate }}</label>
@@ -43,34 +46,83 @@
                       </p-floatlabel>
                     </div>
                     <p-floatlabel class="mt-2">
-                      <input formControlName="iban" pInputText id="iban" class="w-2/5" />
+                      <input formControlName="iban" pInputText id="iban" class="w-full" />
                       <label for="iban">{{ "staff-iban" | translate }}</label>
                     </p-floatlabel>
                   </div>
 
-                <div class="mb-6">
-                  <p-floatlabel variant="on">
-                    <p-datepicker dateFormat="dd/mm/yy" formControlName="birthdate" showIcon iconDisplay="input" [showOnFocus]="false"/>
-                    <label>{{ "staff-birthdate" | translate }}</label>
+                <div class="form-section">
+                  <p-floatlabel>
+                    <p-datepicker
+                      dateFormat="dd/mm/yy"
+                      formControlName="birthdate"
+                      showIcon
+                      iconDisplay="input"
+                      [showOnFocus]="false"
+                      class="max-w-lg max-h-80">
+                    </p-datepicker>
+                    <label class="pt-2">{{ "staff-birthdate" | translate }}</label>
                   </p-floatlabel>
+                </div>
+                <div class="mt-4">
+                  <h2>{{ 'staff-detail-feature-contact' | translate }}</h2>
+
+                  <div class="my-8">
+                    <p-floatlabel >
+                      <input formControlName="mail" pInputText id="mail" class="w-full"/>
+                      <label for="mail">{{ "staff-mail" | translate }}</label>
+                    </p-floatlabel>
+                  </div>
+                  <div class="my-8 w-full">
+                    <p-floatlabel>
+                      <input formControlName="phone" pInputText id="phone" class="w-full"/>
+                      <label for="phone">{{ "staff-phone" | translate }}</label>
+                    </p-floatlabel>
+                  </div>
                 </div>
               </div>
 
-              <div class="w-2/5">
-                <h2 class="capitalize">{{ 'staff-detail-feature-contact' | translate }}</h2>
+              <div class="form-section">
+                <h2 class="capitalize">{{ 'staff-detail-feature-address' | translate }}</h2>
 
-                <div class="my-8">
-                  <p-floatlabel >
-                    <input formControlName="mail" pInputText id="mail" class="w-full"/>
-                    <label for="mail">{{ "staff-mail" | translate }}</label>
-                  </p-floatlabel>
-                </div>
-                <div class="my-8 w-full">
+                <div formGroupName="address">
+                  <div class="my-8 flex gap-6 flex-wrap">
+                    <p-floatlabel>
+                      <input formControlName="road" pInputText id="road" />
+                      <label for="road">{{ "address-road" | translate }}</label>
+                    </p-floatlabel>
+                    <p-floatlabel>
+                      <input formControlName="nb" pInputText id="nb" />
+                      <label for="nb">{{ "address-nb" | translate }}</label>
+                    </p-floatlabel>
+                  </div>
+                  <div class="my-8 flex gap-6 flex-wrap">
+                    <p-floatlabel>
+                      <input formControlName="cp" pInputText id="cp" />
+                      <label for="cp">{{ "address-cp" | translate }}</label>
+                    </p-floatlabel>
+                    <p-floatlabel>
+                      <input formControlName="town" pInputText id="town" />
+                      <label for="town">{{ "address-town" | translate }}</label>
+                    </p-floatlabel>
+                  </div>
+                  <div class="my-8 flex gap-6 flex-wrap">
+                    <p-floatlabel>
+                      <input formControlName="country" pInputText id="country" />
+                      <label for="country">{{ "address-country" | translate }}</label>
+                    </p-floatlabel>
+                  </div>
                   <p-floatlabel>
-                    <input formControlName="phone" pInputText id="phone" class="w-full"/>
-                    <label for="phone">{{ "staff-phone" | translate }}</label>
+                    <input class="w-full" formControlName="complements" pInputText id="complements" />
+                    <label for="complements">{{ "address-complements" | translate }}</label>
                   </p-floatlabel>
                 </div>
+                @if(isEditMode){
+                  <div class="mt-4">
+                    <p-button type="submit">{{ "btn-save" | translate }}</p-button>
+                  </div>
+                  <p-toast class="capitalize"/>
+                }
               </div>
             </form>
           </p-tabpanel>
@@ -79,14 +131,12 @@
             <h2 class="capitalize">{{ 'staff-detail-feature-second-tab' | translate }}</h2>
           </p-tabpanel>
 
-          <p-tabpanel value="2">
-            <h2 class="capitalize">{{ 'staff-detail-feature-third-tab' | translate }}</h2>
-          </p-tabpanel>
-
         </p-tabpanels>
       </p-tabs>
     }
   }
 
   <a class="btn cursor-pointer mt-6" routerLink="/staff">{{ 'staff-feature-detail-back-to-list' | translate }}</a>
+
+
 </main>
