--- a/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
+++ b/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
@@ -1,7 +1,8 @@
 <main class="p-6">
 
-  <div class="mb-6">
+  <div class="mb-6 flex gap-6 items-center">
     <h1>{{ 'staff-feature-overview-title' | translate }}</h1>
+    <p-button outlined raised severity="primary" [routerLink]=[AppNode.CREATE]><i class="pi pi-plus"></i>{{ 'btn-create' | translate }}</p-button>
   </div>
 
   @if(loading){
@@ -26,8 +27,8 @@
             <td>{{ employee.mail }}</td>
             <td>{{ UserRoleEnum[employee.role] }}</td>
             <td class="flex gap-2">
-              <p-button severity="info" [routerLink]=[AppRoutes.STAFFDETAIL,employee.employeeId]>{{ 'btn-detail' | translate }}</p-button>
-              <p-button severity="danger">{{ 'btn-delete' | translate }}</p-button>
+              <p-button outlined raised severity="info" [routerLink]=[AppNode.DETAIL,employee.employeeId]><i class="pi pi-search"></i>{{ 'btn-detail' | translate }}</p-button>
+              <p-button outlined raised severity="danger" (click)="delete(employee.employeeId)"><i class="pi pi-times"></i>{{ 'btn-delete' | translate }}</p-button>
             </td>
           </tr>
         </ng-template>
@@ -39,6 +40,7 @@
     }
   }
 
-
+  <p-toast />
+  <p-confirmDialog />
 </main>
 
