--- a/app/src/app/feature/router/router-page/router-page.component.html
+++ b/app/src/app/feature/router/router-page/router-page.component.html
@@ -1,19 +1,19 @@
 <main class="flex">
   <nav class="min-h-screen">
     <div class="flex gap-4 items-center">
-      <fa-icon [icon]="faChartSimple"></fa-icon>
+      <i class="pi pi-chart-bar"></i>
       <h1 class="text-center">{{ 'dashboard-feature.router-title' | translate }}</h1>
     </div>
     <a routerLink="/dashboard" class="nav-link flex gap-4">
-      <fa-icon [icon]="faHouse" class="icon-size"></fa-icon>
+      <i class="pi pi-home"></i>
       <span>{{ 'dashboard-feature.router-nav-home' | translate }}</span>
     </a>
     <a routerLink="/staff" class="nav-link flex gap-4">
-      <fa-icon [icon]="faUsers" class="icon-size"></fa-icon>
+      <i class="pi pi-user"></i>
       <span>{{ 'dashboard-feature.router-nav-staff' | translate }}</span>
     </a>
     <a routerLink="/home" class="nav-link flex gap-4" (click)="logout()">
-      <fa-icon [icon]="faArrowUpFromBracket" class="icon-size"></fa-icon>
+      <i class="pi pi-sign-out"></i>
       <span>{{ 'dashboard-feature.router-nav-logout' | translate }}</span>
     </a>
   </nav>
@@ -22,13 +22,6 @@
     <header class="p-4">
       <div class="flex flex-row justify-between items-center">
         <h2>{{ 'dashboard-feature.header-title' | translate }}</h2>
-        <div class="flex flex-row gap-4 items-center">
-          <fa-icon class="user-icon" [icon]="faUser"></fa-icon>
-          <div class="flex flex-col">
-            <p class="font-bold text-s">{{ username }}</p>
-            <p class="">{{ state }}</p>
-          </div>
-        </div>
       </div>
     </header>
 
