change title no staff

--- a/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
+++ b/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.html
@@ -36,7 +36,7 @@
 
     }
     @else{
-      <h1>Any employee registered yet</h1>
+      <h1>{{ 'staff-overview-no-staff' | translate }}</h1>
     }
   }
 
