--- a/app/src/app/feature/staff/page/staff-detail-page/staff-detail-page.component.html
+++ b/app/src/app/feature/staff/page/staff-detail-page/staff-detail-page.component.html
@@ -19,11 +19,11 @@
           <p-tabpanel value="0">
             <form [formGroup]="staffFormGroup" class="flex justify-between flex-wrap mx-20" (ngSubmit)="update()">
               <div class="form-section">
-                <div class="flex gap-4 mb-4">
-                  <p-button variant="outlined" (click)="onEditClick()" severity="warn"><i class="pi pi-pencil"></i>{{ "btn-edit" | translate }}</p-button>
-                  <p-button variant="outlined" (click)="delete()" severity="danger"><i class="pi pi-times"></i>{{ "btn-delete" | translate }}</p-button>
+                <div class="flex gap-4 mb-4 items-center">
+                  <h2>{{ 'staff-detail-feature-personal-data' | translate }}</h2>
+                  <p-button outlined raised (click)="onEditClick()" severity="warn"><i class="pi pi-pencil"></i>{{ "btn-edit" | translate }}</p-button>
+                  <p-button outlined raised (click)="delete()" severity="danger"><i class="pi pi-times"></i>{{ "btn-delete" | translate }}</p-button>
                 </div>
-                <h2>{{ 'staff-detail-feature-personal-data' | translate }}</h2>
                   <div class="my-8 flex justify-between flex-wrap gap-8">
                     <p-floatlabel>
                       <input formControlName="lastname" pInputText id="lastname"/>
@@ -118,17 +118,29 @@
           </p-tabpanel>
 
           <p-tabpanel value="1">
-            <div class="flex gap-4 items-center">
-              <h2 class="capitalize my-4">{{ 'staff-detail-feature-second-tab' | translate }}</h2>
-              <p-button outlined raised (click)="newContractOnClick()"><i class="pi pi-plus"></i>{{ "btn-create" | translate }}</p-button>
+            <div class=" mx-20">
+              <div class="flex gap-4 items-center">
+                @if(this.newContract && !this.existingContract$()){
+                  <h2 class="capitalize my-4">{{ 'staff-detail-feature-second-tab' | translate }}</h2>
+                  <p-button outlined raised (click)="newContractOnClick()"><i class="pi pi-plus"></i>{{ "btn-create" | translate }}</p-button>
+                }
+                @else{
+                  <h2 class="capitalize my-4">{{ 'contract-feature-current' | translate }}</h2>
+                  <p-button outlined raised severity="warn"><i class="pi pi-pencil"></i>{{ "btn-edit" | translate }}</p-button>
+                  <p-button outlined raised severity="danger"><i class="pi pi-times"></i>{{ "btn-delete" | translate }}</p-button>
+                }
+              </div>
+
+              @if(this.newContract && !this.existingContract$()){
+                <app-contract-create-page [employeeId]="employeeId" (contractCreated)="createdContract()"></app-contract-create-page>
+              }
+              @else{
+                <app-contract-detail-page></app-contract-detail-page>
+              }
             </div>
 
-            @if(this.newContract){
-              <app-contract-create-page [employeddId]="employeeId"></app-contract-create-page>
-            }
 
           </p-tabpanel>
-
         </p-tabpanels>
       </p-tabs>
     }
