--- a/app/src/app/feature/contract/page/contract-create-page/contract-create-page.component.html
+++ b/app/src/app/feature/contract/page/contract-create-page/contract-create-page.component.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <p-button outlined raised type="submit" severity="success">{{ 'btn-create' | translate }}</p-button>
+  <p-button outlined raised type="submit" severity="success">{{ 'btn-save' | translate }}</p-button>
 </form>
 
 <p-toast/>
