--- a/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
+++ b/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
@@ -1,3 +1,9 @@
+<div class="flex gap-4 mb-6 items-center">
+  <h2 class="capitalize my-4">{{ 'contract-feature-current' | translate }}</h2>
+  <p-button (click)="edit()" outlined raised severity="warn"><i class="pi pi-pencil"></i>{{ "btn-edit" | translate }}</p-button>
+  <p-button outlined raised severity="danger" (click)="delete()"><i class="pi pi-times"></i>{{ "btn-delete" | translate }}</p-button>
+</div>
+
 <form [formGroup]="formGroup" (ngSubmit)="update()">
   <div class="flex flex-col gap-8 my-6">
     <p-float-label>
@@ -32,9 +38,8 @@
       </div>
     </div>
   </div>
-
-  <p-button outlined raised type="submit" severity="success">{{ 'btn-create' | translate }}</p-button>
+  @if(this.editMode){
+    <p-button outlined raised type="submit" severity="success"><i class="pi pi-save"></i>{{ 'btn-save' | translate }}</p-button>
+  }
 </form>
 
-<p-toast/>
-<p-confirm-dialog/>
